# DiabeticRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rag.py
static/: app.js  style.css
templates/: index.html
