[project]
name = "diabetic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
